Move footer down a little bit, prevent footer to show content behind when scrolling on mobile.

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,6 +1,6 @@
 #footer-barc {
   position: absolute;
-  bottom: 0;
+  bottom: -2px;
   position: sticky;
   background-color: $faded-blue;
 }
